--- a/exercicio.html
+++ b/exercicio.html
@@ -10,17 +10,66 @@
         }
 
         table {
-            width: 400px;
+            width: 600px;
             height: 400px;
             border-collapse: collapse;
         }
-
-        td {
+        td{
             border: 1px solid black;
             padding: 8px;
             /* Alinhamento padrão */
             text-align: center;      
             vertical-align: middle;  
+        }
+
+        td.esquerdo{
+            border: 1px solid black;
+            padding: 7px;
+            /* Alinhamento padrão */
+            text-align: left;      
+            vertical-align: middle;  
+        }
+        td.esquerdo_topo{
+            border: 1px solid black;
+            padding: 7px;
+            /* Alinhamento padrão */
+            text-align: center;      
+            vertical-align: top;  
+        }
+        td.esquerdo_centro{
+            border: 1px solid black;
+            padding: 7px;
+            /* Alinhamento padrão */
+            text-align: center;      
+            vertical-align: center;  
+        }
+        td.direito {
+            border: 1px solid black;
+            padding: 8px;
+            /* Alinhamento padrão */
+            text-align: right;      
+            vertical-align: middle;  
+        }
+        td.direito_baixo{
+            border: 1px solid black;
+            padding: 8px;
+            /* Alinhamento padrão */
+            text-align: center;      
+            vertical-align: bottom;  
+        }
+        td.direito_centro{
+            border: 1px solid black;
+            padding: 8px;
+            /* Alinhamento padrão */
+            text-align: center;      
+            vertical-align: center;  
+        }
+        td.number{
+            border: 1px solid black;
+            padding: 8px;
+            /* Alinhamento padrão */
+            text-align: right;      
+            vertical-align: right;  
         }
 
         /* 
@@ -55,24 +104,24 @@
     
     <table>
         <tr> <!-- Primeira linha -->
-            <td>A1</td>
-            <td>B1</td>
-            <td>C1</td>
+            <td class="esquerdo">A1<br>(esquerda)</td>
+            <td class="direito_centro">B1<br>(padrão centro)</td>
+            <td class="direito">C1<br>(direita)</td>
         </tr>
         <tr> <!-- Segunda linha -->
-            <td>A2</td>
-            <td>B2</td>
-            <td>C2</td>
+            <td class="esquerdo_topo">A2<br>(topo)</td>
+            <td>B2<br>(padrão)</td>
+            <td class="direito_baixo">C2<br>(baixo)</td>
         </tr>
         <tr> <!-- Terceira linha -->
-            <td>A3</td>
-            <td>B3</td>
-            <td>C3</td>
+            <td class="esquerdo_topo">A3<br>(topo)</td>
+            <td class="direito_baixo">B3<br>(baixo)</td>
+            <td class="direito_centro">C3<br>(padrão)</td>
         </tr>
         <tr> <!-- Quarta linha -->
-            <td>A4</td>
-            <td>B4</td>
-            <td>C4</td>
+            <td class="esquerdo_centro">A4</td>
+            <td class="number">1000<br>(number a right)</td>
+            <td class="direito">C4</td>
         </tr>
     </table>
     
